<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sync Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_loading">Loading</string>
    <!-- Register -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="all_fields_required">* All Fields Required</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="forget_username">Please fill out username</string>
    <string name="forget_password">Please fill out password</string>
    <string name="Error_confirm_password">Passwords do not match</string>
    <string name="registration_success">Registration Success</string>
    <string name="user_exist">Username already exists</string>
    <string name="registration_failed_please_try_again">Registration failed, Please try again</string>
    <string name="no_internet_please_try_again">Please check your internet connection and try again</string>
    
    <!-- End Register -->


    <!-- start login -->

    <string name="sign_in">Sign In</string>
    <string name="sign_in_Google">Login with Google </string>
    <string name="log_in_facebook">Login with Facebook</string>
    <string name="sign_in_twitter">Login with Twitter</string>
    <string name="forget_password_login_view">Forget password?</string>
    <string name="welcome_syncMe">Welcome SyncMe</string>
    <string name="invalid_username_or_password">The username or password you entered is incorrect.</string>
    <string name="or_signin">Or Sign in with</string>
    <!-- end login -->


    <!-- start login using Google -->
    <string name="new_google_account">Add new Google account</string>
    <string name="dont_have_gmail">You don\'t have gmail application in your phone</string>
    <!-- End login using Google -->


    <!-- start common -->
    <string name="demo_version">Demo Version</string>
    <string name="please_try_again">Please try again</string>

    <!-- end common -->


    <!-- start Home -->
    <string name="btn_send_contact">Send Contact</string>
    <string name="btn_get_contact">Get Contact</string>

    <!-- End Home -->


    <!-- start Setting -->
    <string name="save_setting_menu">Save setting</string>
    <string name="wifi_summary">Enable or disable sync using wifi</string>
    <string name="wifi_title">Enable WIFI</string>
    <string name="threeG_summary">Enable or disable sync using 3G</string>
    <string name="threeG_title">Enable 3G</string>

    <!-- End Setting -->
    <string name="app_id">301551589966698</string>

</resources>